--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 *
 
 # 不忽略的文件夹
-!attack_demo/
-!CapAnalysis/
-!PersistExt/
+!attack_demo/*
+!CapAnalysis/*
+!PersistExt/*
+!TensorDetect/*
 
 # 不忽略的特定文件
 !API_tf_version_analysis.ipynb
