--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 *
 
 # 不忽略的文件夹
-!TensorDetect/*
-!attack_demo/*
-!CapAnalysis/*
-!PersistExt/*
+!TensorDetect
+!attack_demo
+!CapAnalysis
+!PersistExt
 
 
 # 不忽略的特定文件
